Fix: 값을 어떻게 가져오는지, innerText를 어떻게 사용하는지 몰랐음
1. 요소는 document.querySelector("#id")로 가져온다
2. document.querySelector로 가져온 값을 알고싶으면 .value로 접근한다
3. 위 코드는 input으로 받은 값을 가져오고 그 다음 input으로 들어온 값을 삭제한 다음, input값을 문서에 반영하는 코드이다
4. 23번줄의 target은 8번 줄 보면 알 수 있다

--- a/firstproject_2/src/main/resources/static/selfcheck.html
+++ b/firstproject_2/src/main/resources/static/selfcheck.html
@@ -9,11 +9,18 @@
 <input type="text" id="text-input">
 <button id="send-btn">전송</button>
 <script>
-    // 전송 버튼 변수화
-    const sendBtn = document.querySelector("#send-btn");
-    // 전송 클릭 이벤트 감지
-    sendBtn.addEventListener("click", function() {
-        if (
+    // 요소 가져오기
+    const inputElement = document.querySelector("#text-input")
+    const buttonElement = document.querySelector("#send-btn")
+
+    // 클릭 이벤트 감지하기
+    buttonElement.addEventListener("click", function() {
+        // input 값 가져오기
+        const str = inputElement.value;
+        // input 값 삭제
+        inputElement.value = "";
+        // 문서에 반영
+        target.innerText = str;
     });
 </script>
 
